# geo-research-agent

./: .dockerignore  .env.template  .env.tools.template  .gitignore  README.md  __init__.py  pyproject.toml  requirements-minimal.txt  requirements.txt  产品日志.md  项目日志.md
app/: __init__.py  frontend.py  main.py
app/core/: config.py  database.py  interactive_bus.py  progress_bus.py  security.py
app/models/: user.py
app/schemas/: research.py
app/static/: index.html  wiki.html
configs/: baseline.yaml  default.yaml  geo_mvp.yaml  geo_real_search.yaml
configs/agents/: blue_agent.yaml  red_agent.yaml  researcher.yaml
configs/evolution/: grpo_online.yaml  reward_shaping.yaml
configs/planner/: planner.yaml
configs/tools/: arxiv_reader.yaml  browser.yaml  calculator.yaml  file_reader.yaml  notepad.yaml  web_search.yaml
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  nginx.conf
docs/: geo_mvp_design.md
evaluation/: analyze_ablation.py  metrics.py  report.py  run_baseline.py
evaluation/benchmarks/: hotpotqa.py  research_bench.py
evaluation/metrics/: __init__.py  composite.py  judge_based.py  rule_based.py  stats.py
learning/: 00-project-anatomy-and-language-primer.md  01-architecture-overview.md  99-interview-questions.md  README.md
learning/modules/: 02-cli-runner-config.md  03-planner-dag-orchestrator.md  04-agent-tool-calling-and-tools.md  05-model-router-memory-compressor.md  06-summarizer-adversarial-evaluation.md
learning_note/: 01_week_plan.md  02_project_architecture.md  03_deepresearch_architectures.md  04_python_for_source_reading.md  05_module_deep_dive.md  06_interview_story_and_georesearch_plan.md  07_environment_and_project_foundations.md  README.md
outputs/baseline/: report_20260525_184233_简要分析遥感研究中使用_Landsat_.md
outputs/geo_mvp/: report_20260525_194006_如何研究_2018-2024_年武汉城市.md
scripts/: render_trace.py  run_ablation.py  run_all_experiments.py  run_benchmark.py  run_eval.py  run_evolution.py  run_judge.py  run_repl.py  run_single.py
src/: __init__.py
src/adversarial/: blue_agent.py  loop.py  red_agent.py  verdict.py
src/agents/: __init__.py  base_agent.py  prompt_builder.py  researcher.py  summarizer.py  tool_calling_loop.py
src/compressor/: compressor.py  extractive.py  sliding_window.py  summarizer.py
src/core/: __init__.py  ablation.py  judge.py  runner.py
src/evidence/: __init__.py  evidence_store.py
src/evolution/: collector.py  engine.py  experience_memory.py  judge.py  proposer.py  (+1 more)
tests/: continuous_test.py  demo.py  run_test_loop.sh  start_vllm_server.sh  validate_env.py
(+44 files in other folders)
